SERVER-15908 SERVER-15956 fix explain shell helper handling of slaveOk and readPref